--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "nodemon": "^3.1.0"
   },
   "name": "login-service",
   "version": "1.0.0",
