--- a/app/package.json
+++ b/app/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "app-root-path": "^3.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "winston": "^3.13.0"
   },
   "name": "login-service",
   "version": "1.0.0",
