--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.9.7",
     "nodemon": "^3.1.0",
     "winston": "^3.13.0"
   },
